--- a/logistics-manage/logistics-manage-service/pom.xml
+++ b/logistics-manage/logistics-manage-service/pom.xml
@@ -12,4 +12,16 @@
     <artifactId>logistics-manage-service</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>logistics-manage-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>logistics-manage-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
