--- a/logistics-parent/pom.xml
+++ b/logistics-parent/pom.xml
@@ -9,8 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>../logistics-common</module>
         <module>../logistics-manage</module>
+        <module>../logistics-commons</module>
     </modules>
 
     <!--jar包版本号的同一管理-->
