整合之后的版本.个人模块也增加了send功能

--- a/logistics-commons/pom.xml
+++ b/logistics-commons/pom.xml
@@ -17,6 +17,10 @@
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>org.csource</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+        </dependency>
         <!--4: Spring相关 -->
         <!--Spring核心依赖 -->
         <dependency>
