--- a/logistics-portal/logistics-portal-web/pom.xml
+++ b/logistics-portal/logistics-portal-web/pom.xml
@@ -48,7 +48,7 @@
     </dependencies>
 
     <build>
-        <finalName>logistics-manager-web</finalName>
+        <finalName>logistics-portal-web</finalName>
         <plugins>
             <!--Tomcat的maven插件的坐标-->
             <plugin>
